css/style.css
/* Team Section
--------------------------------*/
#team .team-block {
  box-shadow: 0 0 35px rgba(0, 0, 0, 0.1);
  height: 254px;
  overflow: hidden;
  position: relative;
  width: 100%;
  color: black;
}

@media (max-width: 991px) {
  #team .team-block {
    margin-bottom: 30px;
  }
}

#team .team-block img {
  width: 100%;
}

/* Default Padding : 20 */
#team .team-block .team-content {
  background: #fff none repeat scroll 0 0;
  bottom: 0;
  box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.2), 0 0 0 0 rgba(0, 0, 0, 0.19);
  bottom: -147px;
  padding: 10px 0;
  position: absolute;
  width: 100%;
  transition: all 0.5s ease-in-out 0s;
}

/* Default display: Block */
#team .team-block .team-content ul {
  display: none;
  width: 100%;
}

#team .team-block .team-content ul li {
  display: inline-block;
}

#team .team-block .team-content ul li a {
  color: #626262;
}

#team .team-block .team-content ul li a .fa {
  float: left;
  padding-left: 10px;
  padding-right: 10px;
  transition: 0.3s;
}

#team .team-block .team-content ul li a .fa:hover {
  color: #71c55d;
}

#team .team-block .team-content ul > span {
  display: inline-block;
  font-size: 14px;
  font-weight: 300;
  letter-spacing: 0.5px;
  margin-bottom: 20px;
  text-transform: uppercase;
}

/* Buttom Default : 0 */
#team .team-block:hover .team-content {
  bottom: -25px;  
  transition: all 0.5s ease-in-out 0s;
}

#cf {
  position:relative;
  margin:0 auto;
}

#cf img {
  position:absolute;
  left:0;
  -webkit-transition: opacity 0.5s ease-in-out;
  -moz-transition: opacity 0.5s ease-in-out;
  -o-transition: opacity 0.5s ease-in-out;
  transition: opacity 0.5s ease-in-out;
}

#cf img.top:hover {
  opacity:0;
}

